# Didactopus

./: .gitignore  .zip_update_manifest.json  075-README.md  Dockerfile  FAQ.md  LICENSE  Makefile  OPERATIONS.md  README.md  docker-compose.yml  pyproject.toml  workspace_registry.json
.update_readmes/: 20260314_131842__085-didactopus-workspace-manager-update__README.md  20260314_131846__090-didactopus-draft-pack-import-workflow-update__README.md  20260314_131849__095-didactopus-import-validation-safety-update__README.md  20260314_131853__100-didactopus-full-pack-validation-update__README.md  20260314_131856__105-didactopus-coverage-alignment-update__README.md  20260314_131859__110-didactopus-curriculum-path-quality-update__README.md  20260314_131902__115-didactopus-evaluator-alignment-update__README.md  20260314_131906__120-didactopus-evidence-flow-mastery-ledger-update__README.md  20260314_131909__125-didactopus-graph-prereq-analysis-update__README.md  20260314_131913__130-didactopus-semantic-qa-update__README.md  20260314_131917__135-didactopus-admin-curation-layer__README.md  20260314_131920__140-didactopus-admin-learner-ui-workflows__README.md  20260314_131926__150-didactopus-agent-service-account-layer__README.md  20260314_131930__155-didactopus-animated-concept-graph-layer__README.md  20260314_131933__160-didactopus-artifact-registry-layer__README.md  20260314_132003__165-didactopus-attribution-provenance-update__README.md  20260314_132010__170-didactopus-auth-db-async-evaluator-prototype__README.md  20260314_132013__175-didactopus-backend-api-prototype__README.md  20260314_132017__180-didactopus-contribution-management-layer__README.md  20260314_132021__185-didactopus-course-compliance-ui-prototype__README.md  20260314_132024__190-didactopus-deployment-policy-and-agent-hooks__README.md  20260314_132027__195-didactopus-dual-lane-policy-layer__README.md  20260314_132030__200-didactopus-layout-aware-graph-engine-layer__README.md  20260314_132033__205-didactopus-learner-state-progression-update__README.md  20260314_132036__210-didactopus-learning-animation-layer__README.md  20260314_132039__215-didactopus-live-learner-ui-prototype__README.md  20260314_132042__220-didactopus-media-rendering-pipeline-layer__README.md  20260314_132048__225-didactopus-orchestration-ux-update__README.md  20260314_132051__230-didactopus-pack-persistence-update__README.md  20260314_132053__235-didactopus-productionization-scaffold__README.md  (+8 more)
(+499 files in other folders)
