[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "didactopus"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.7",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "sqlalchemy>=2.0",
  "passlib[bcrypt]>=1.7",
  "python-jose[cryptography]>=3.3",
  "pyyaml>=6.0.2"
]

[project.scripts]
didactopus-api = "didactopus.api:main"

[tool.setuptools.packages.find]
where = ["src"]
