[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "didactopus"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "epistemap @ git+https://github.com/welsberr/Epistemap.git@f452d4fa2f7b49b2ffcbc5d39d8700b84e65f717",
  "networkx>=3",
  "pydantic>=2.7",
  "PyYAML>=6",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "sqlalchemy>=2.0",
  "passlib[bcrypt]>=1.7",
  "python-jose[cryptography]>=3.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.5"
]

[project.scripts]
didactopus = "didactopus.main:main"
didactopus-api = "didactopus.api:main"
didactopus-mcp = "didactopus.mcp:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff.lint]
# Keep CI focused on syntax, undefined names, and other execution-breaking
# errors while the repository's historical style backlog is addressed
# separately.
select = ["E9", "F63", "F7", "F82"]
